--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,38 @@
+html {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+
+  font-size: 62.5%;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+* {
+  font-size: 1.6rem;
+}
+
+h1 {
+  font-size: 3.2rem;
+}
+
+h2 {
+  font-size: 2.8rem;
+}
+
+h3 {
+  font-size: 2.4rem;
+}
+
+img {
+  width: 100%;
+  height: auto;
+}
+
 body {
   margin: 0;
   padding: 0;
